wordpos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpos
  labels:
    app: wordpos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpos
  template:
    metadata:
      labels:
        app: wordpos
    spec:
      containers:
      - name: wordpos
        image: dushyant03/wordpos-svc
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 3
