lyrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lyrics-svc
  labels:
    app: lyrics
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: lyrics
