wordpos-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpos-svc
  labels:
    app: wordpos
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: wordpos
