api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
spec:
  backend:
    serviceName: wordpos-svc
    servicePort: 80
